Issue #15368: fixing variable typo.