Python/compile.c
@@ -379,7 +379,7 @@ dictbytype(PyObject *src, int scope_type, int flag, int offset)
         Py_DECREF(sorted_keys);
         return NULL;
     }
-    num_keys = PyList_GET_SIZE(src);
+    num_keys = PyList_GET_SIZE(sorted_keys);
 
     for (key_i = 0; key_i < num_keys; key_i++) {
         k = PyList_GET_ITEM(sorted_keys, key_i);
